Fix container width on mobile screens to have less padding

--- a/public/main.css
+++ b/public/main.css
@@ -16,13 +16,28 @@ body,
 .container--car-image {
   max-width: 650px;
   margin: 0 auto;
-  padding: 0 3.5rem;
+  padding: 0 0.5rem;
   /* border: 2px solid cornflowerblue; */
+}
+
+@media screen and (min-width: 768px) {
+  .container--very-narrow,
+  .container--test-drive,
+  .container--car-image {
+    padding: 0 3.5rem;
+    /* border: 2px solid cornflowerblue; */
+  }
 }
 
 p.very-small {
   font-size: 0.5rem;
   margin: 1rem;
+}
+
+.test-drive-card {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .test-drive-card .list-group-item-primary {
